src/app/app.component.scss
.slide-containers .slide {
    position: fixed;
    height: 100%;
    width: 100%;
}
p {
    font-family: verdana;
    font-size: 12px;
    color: #FFFFFF;
}

.start {
    background-color: #9013FE;
    color: white;
    border-radius: 10px;
}
.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    position: fixed;
    height: 100%;
}
.bottom-container {
    justify-content: space-between;
    flex-direction: column;
    display: flex;
    width: 100%;
}
.second-slide-h1 {
    width: 190px;
    display: flex;
    justify-content: space-around;
    margin: auto;
    padding-top: 20px;
}
app-loading-spinner {
    margin: auto;
    display: flex;
    justify-content: space-around;
    padding-bottom: 60px;
}
.left-satellite {
    position: absolute;
    top: 300px;
    left: 50px;
}
.right-satellite {
    position: absolute;
    top: 300px;
    left: 260px;
    transform: rotate(90deg);
}
.bottom-left-satellite {
    position: absolute;
    top: 500px;
    left: 50px;
    transform: rotate(270deg);
}
.bottom-right-satellite {
    position: absolute;
    top: 500px;
    left: 260px;
    transform: rotate(180deg);
}
#compass {
    width: 113px;
    height: 113px;
    background-image: url("../assets/compass.png");
}
.compass {
    width: 113px;
    height: 113px;
    background-image: url("../assets/compass.png");
}
.earth {
    width: 130px;
    height: 130px;
    background-image: url("../assets/earth.svg");
}

#outer-ring {
    width: 250px;
    height: 248px;
    background-image: url("../assets/outer-ring.svg");
}

.big-hand {
    width: 12px;
    top: 30px;
    height: 80px;
    position: absolute;
    background-image: url("../assets/long hand.svg");
}
.little-hand {
    width: 8px;
    height: 52px;
    position: absolute;
    top: 124px;
    right: 217px;
    z-index: 1;
    -webkit-transform: rotate(37deg);
    transform: rotate(56deg);
    background-image: url("../assets/short hand.svg");
}
.inner-ring {
    width: 47px;
    height: 47px;
    position: absolute;
    top: 100px;
    background-image: url("../assets/inner ring.svg");
}
.flex-center-bottom {
    background-color: #739FD0;
    color: #000000;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-content: center;
    align-items: center;
}
.flex-item-center {
    border: solid 2px #4675AA;
    order: 0;
    flex: 0 1 auto;
    align-self: center;
}

.btn {
    justify-content: flex-end;
    display: flex;
    padding: 0;
    overflow: hidden;
    border-width: 0;
    outline: none;
    border-radius: 2px;
    box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
    color: #ecf0f1;
    transition: background-color .3s;
}

.btn:hover, .btn:focus {
    background-color: #27ae60;
}

.btn > * {
    position: relative;
}

.btn span {
    display: block;
    padding: 5px 17px;
    font-size: 22px;
    font-weight: lighter;
}

.btn:before {
    content: "";

    position: absolute;
    top: 50%;
    left: 50%;

    display: block;
    width: 0;
    padding-top: 0;

    border-radius: 100%;

    background-color: rgba(236, 240, 241, .3);

    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.btn:active:before {
    width: 120%;
    padding-top: 120%;

    transition: width .2s ease-out, padding-top .2s ease-out;
}

.btn.purple {
    background-color: #9013FE;
    border-radius: 15px;
    width: 80px;
    margin-left: 60vw;
}

.btn.purple:hover, .btn.purple:focus {
    background-color: #691aaf;
}

